# rag-eval-toolkit

./: README.md  pyproject.toml
examples/: dataset.jsonl
rag_eval/: __init__.py  cli.py  judge.py  retrieval.py
tests/: test_retrieval.py
